--- a/public/css/styleCalculator.css
+++ b/public/css/styleCalculator.css
@@ -55,17 +55,24 @@ body {
     font-weight: 1000;
 }
 
-.price_projected {
+.price_projected_1,
+.price_projected_2 {
     padding: 10px;
     text-transform: uppercase;
 }
 
-.price_projected {
+.price_projected_1 {
+    margin-bottom: 10px;
+    background-color: rgb(255, 0, 0);
+}
+
+.price_projected_2 {
     margin-bottom: 10px;
     background-color: rgb(0, 255, 0);
 }
 
-.price_projected--text {
+.price_projected_1--text,
+.price_projected_2--text {
     float: left;
     font-size: 25px;
     color: rgb(0, 0, 0);
@@ -73,7 +80,8 @@ body {
     font-weight: 1500;
 }
 
-.price_projected--value {
+.price_projected_1--value,
+.price_projected_2--value {
     font-size: 35px;
     letter-spacing: 1px;
     float: left;
