--- a/public/css/styleCalculator_admin.css
+++ b/public/css/styleCalculator_admin.css
@@ -58,38 +58,49 @@ body {
 }
 
 .price_title {
-    font-size: 35px;
+    font-size: 45px;
     text-align: center;
-    margin-bottom: 10px;
-    margin-top: 30px;
+    margin-bottom: 5px;
+    margin-top: 35px;
     font-weight: 1000;
 }
 
 .price_cost, .price_projected_1, .price_projected_2 {
-    padding: 10px;
+    padding: 12.5px;
     text-transform: uppercase;
+    width: 500px;
 }
 
 .price_cost {
     margin-bottom: 10px;
-    background-color: #28B9B5;
+    background-color: rgb(252, 252, 252);
 }
 
-.price_projected_1, .price_projected_2 {
-    background-color: #FF5049;
+.price_projected_1 {
+    margin-bottom: 5px;
+    background-color: rgb(255, 75, 75);
+}
+
+.price_projected_2 {
+    margin-bottom: 5px;
+    background-color: rgb(75, 255, 75);
 }
 
 .price_cost--text, .price_projected_1--text, .price_projected_2--text {
     float: left;
-    font-size: 20px;
+    font-size: 25px;
     color: rgb(0, 0, 0);
     margin-top: 2px;
     font-weight: 500;
 }
 
-.price_cost--value, .price_projected_1--value, .price_projected_2--value {
+.price_cost--value, .price_projected_1--value, .price_projected_2--value, .UIprice_projected_1--value, .UIprice_projected_2--value {
     letter-spacing: 1px;
     float: left;
+    font-size: 25px;
+    color: rgb(0, 0, 0);
+    margin-top: 2px;
+    font-weight: 500;
 }
 
 .price_cost--percentage, .price_projected_1--percentage, .price_projected_2--percentage {
