--- a/public/css/styleCalculator_admin.css
+++ b/public/css/styleCalculator_admin.css
@@ -94,7 +94,7 @@ body {
     font-weight: 500;
 }
 
-.price_cost--value, .price_projected_1--value, .price_projected_2--value, .UIprice_projected_1--value, .UIprice_projected_2--value {
+.price_cost--value, .price_projected_1--value, .price_projected_2--value, .UIprice_projected_1--value, .UIprice_projected_2--value, .UIprice_cost--value {
     letter-spacing: 1px;
     float: left;
     font-size: 25px;
