--- a/public/css/styleCalculator_admin.css
+++ b/public/css/styleCalculator_admin.css
@@ -60,18 +60,18 @@ body {
 .price_title {
     font-size: 45px;
     text-align: center;
-    margin-bottom: 5px;
-    margin-top: 35px;
+    margin-bottom: 1px;
+    margin-top: 1px;
     font-weight: 1000;
 }
 
-.price_cost, .price_projected_1, .price_projected_2 {
+.packingCost, .price_cost, .price_projected_1, .price_projected_2 {
     padding: 12.5px;
     text-transform: uppercase;
     width: 500px;
 }
 
-.price_cost {
+.packingCost, .price_cost {
     margin-bottom: 10px;
     background-color: rgb(252, 252, 252);
 }
@@ -86,7 +86,7 @@ body {
     background-color: rgb(75, 255, 75);
 }
 
-.price_cost--text, .price_projected_1--text, .price_projected_2--text {
+.packingCost--text, .price_cost--text, .price_projected_1--text, .price_projected_2--text {
     float: left;
     font-size: 25px;
     color: rgb(0, 0, 0);
@@ -94,7 +94,7 @@ body {
     font-weight: 500;
 }
 
-.price_cost--value, .price_projected_1--value, .price_projected_2--value, .UIprice_projected_1--value, .UIprice_projected_2--value, .UIprice_cost--value {
+.packingCost--value, .price_cost--value, .price_projected_1--value, .price_projected_2--value, .UIprice_projected_1--value, .UIprice_projected_2--value, .UIprice_cost--value {
     letter-spacing: 1px;
     float: left;
     font-size: 25px;
