--- a/public/css/styleIndex.css
+++ b/public/css/styleIndex.css
@@ -1,4 +1,5 @@
 /* Full-width inputs */
+
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -9,8 +10,9 @@ input[type=text], input[type=password] {
 }
 
 /* Set a style for all buttons */
+
 button {
-    background-color: #4CAF50;
+    background-color: #003A5D;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -20,51 +22,74 @@ button {
 }
 
 /* Add a hover effect for buttons */
+
 button:hover {
     opacity: 0.8;
 }
 
 /* Extra style for the cancel button (red) */
+
 .cancelbtn {
     width: auto;
     padding: 10px 18px;
-    background-color: #f44336;
+    background-color: #00A1DF;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 20;
+    font-weight: 700;
 }
 
 /* Extra style for the register button (blue) */
+
 .register {
     width: auto;
     padding: 10px 18px;
-    background-color: #3320e0;
+    background-color: #00A1DF;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 20;
+    font-weight: 700;
 }
 
 /* Extra style for the reset button (red) */
+
 .resetbtn {
-    text-align:right;
+    text-align: right;
     width: auto;
     padding: 10px 18px;
-    background-color: #f44336;
+    background-color: #00A1DF;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 20;
+    font-weight: 700;
 }
 
 /* Center the avatar image inside this container */
+
 .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
 }
 
 /* Avatar image */
+
 img.avatar {
     width: 15%;
     border-radius: 50%;
 }
 
 /* Right the Logo image inside this container */
+
 .logocontainer {
     position: right;
     margin: 24px 0 12px 0;
 }
 
 /* Logo image */
+
 img.esl {
     width: 25%;
     border-radius: 5%;
@@ -74,17 +99,20 @@ img.esl {
 }
 
 /* Add padding to containers */
+
 .container {
     padding: 16px;
 }
 
 /* The "Forgot password" text */
+
 span.psw {
     float: right;
     padding-top: 16px;
 }
 
 /* Change styles for span and cancel button on extra small screens */
+
 @media screen and (max-width: 300px) {
     span.psw {
         display: block;
@@ -93,25 +121,39 @@ span.psw {
     .cancelbtn {
         width: 100%;
     }
-} 
+}
 
 .title {
+    color: #003A5D;
     font-size: 35px;
     text-align: center;
     margin-bottom: 10px;
-    font-weight: 1000;
+    font-weight: 700;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .subTitle {
-    font-size: 30px;
+    color: #003A5D;
+    font-size: 35px;
     text-align: center;
     margin-bottom: 10px;
-    font-weight: 1000;
+    font-weight: 700;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+label {
+    color: #0071CE;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    letter-spacing: 20;
+    font-weight: 700;
+    /* height: 100vh; */
 }
 
 body {
     /* color: #555; */
-    background-image: url("images/leaves-pattern.png");
+    /* background-image: url("images/leaves-pattern.png"); */
     font-family: Open Sans;
     font-size: 25px;
     position: relative;
