--- a/public/css/styleCalculator.css
+++ b/public/css/styleCalculator.css
@@ -17,7 +17,7 @@
 body {
     /* color: #555; */
     /* background-image: url("images/plain_white.png"); */
-    /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     position: relative;
     height: 100vh;
@@ -26,7 +26,7 @@ body {
     color: #003A5D;
     font-size: 20px;
     font-weight: 700;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 20;
     line-height: 1.6;
     letter-spacing: 1px;
@@ -240,7 +240,7 @@ label {
     color: #003A5D;
     font-size: 20px;
     font-weight: bold;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 20;
     height: 100vh;
 }
@@ -267,7 +267,7 @@ input[type=checkbox]:hover {
     text-align: left;
     outline: none;
     font-size: 25px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
 }
 
@@ -288,7 +288,7 @@ input[type=checkbox]:hover {
 }
 
 .active, .collapsibleCart:hover {
-    background-color: #003A5D;
+    background-color: #00A1DF;
 }
 
 .content {
@@ -317,7 +317,7 @@ input[type=checkbox]:hover {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     padding: 10px 24px;
     text-decoration: none;
@@ -359,7 +359,7 @@ input[type=checkbox]:hover {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: bold;
     padding: 12px 44px;
@@ -402,7 +402,7 @@ input[type=checkbox]:hover {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     padding: 10px 24px;
     text-decoration: none;
@@ -444,7 +444,7 @@ input[type=checkbox]:hover {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     padding: 10px 24px;
     text-decoration: none;
