--- a/public/css/styleCalculator_admin.css
+++ b/public/css/styleCalculator_admin.css
@@ -16,12 +16,20 @@
 
 body {
     /* color: #555; */
-    /* background-image: url("images/leaves-pattern.png"); */
-    font-family: Open Sans;
+    /* background-image: url("images/plain_white.png"); */
+    /* font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     position: relative;
     height: 100vh;
-    font-weight: 400;
+    font-weight: 400; */
+    height: 50vh;
+    color: #003A5D;
+    font-size: 16px;
+    /* font-weight: 300; */
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 20;
+    line-height: 1.6;
+    letter-spacing: 1px;
 }
 
 .right {
@@ -41,11 +49,12 @@ body {
 **********************************************/
 
 .top {
-    height: 59vh;
-    background-image: linear-gradient(rgba(0, 37, 105, 0.993), rgba(0, 0, 0, 0.25)), url("images/back.png");
+    height: 80vh;
+    /* background-image: linear-gradient(rgba(0, 37, 105, 0.993), rgba(0, 0, 0, 0.25)), url("images/back.png"); */
     background-size: cover;
     background-position: center;
     position: relative;
+    /* background-color: #ADAFB1; */
 }
 
 .price {
@@ -58,11 +67,11 @@ body {
 }
 
 .price_title {
-    font-size: 45px;
+    font-size: 35px;
     text-align: center;
     margin-bottom: 1px;
     margin-top: 1px;
-    font-weight: 1000;
+    font-weight: 700;
 }
 
 .lastPurchasePrice, .packingCost, .price_cost, .price_projected_1, .price_projected_2 {
@@ -73,34 +82,34 @@ body {
 
 .lastPurchasePrice, .packingCost, .price_cost {
     margin-bottom: 10px;
-    background-color: rgb(252, 252, 252);
+    background-color: #003A5D;
 }
 
-.price_projected_1 {
+.price_projected_1, .price_projected_2 {
     margin-bottom: 5px;
-    background-color: rgb(255, 75, 75);
+    background-color: #00A1DF;
 }
 
-.price_projected_2 {
+/* .price_projected_2 {
     margin-bottom: 5px;
     background-color: rgb(75, 255, 75);
-}
+} */
 
 .lastPurchasePrice--text, .packingCost--text, .price_cost--text, .price_projected_1--text, .price_projected_2--text {
     float: left;
     font-size: 25px;
-    color: rgb(0, 0, 0);
+    color: white;
     margin-top: 2px;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .lastPurchasePrice--value, .packingCost--value, .price_cost--value, .price_projected_1--value, .price_projected_2--value, .UIprice_projected_1--value, .UIprice_projected_2--value, .UIprice_cost--value {
     letter-spacing: 1px;
     float: left;
     font-size: 25px;
-    color: rgb(0, 0, 0);
+    color: white;
     margin-top: 2px;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .price_cost--percentage, .price_projected_1--percentage, .price_projected_2--percentage {
@@ -109,6 +118,7 @@ body {
     font-size: 11px;
     padding: 3px 0;
     margin-left: 10px;
+    color: white;
 }
 
 .price_projected_1--percentage, .price_projected_2--percentage {
@@ -238,11 +248,12 @@ h2 {
     font-size: 150%
 }
 
-.lab {
+.costLab {
     float: left;
-    color: darkblue;
+    color: white;
     padding-right: 15px;
-    font-size: 150%
+    font-size: 150%;
+    font-weight: 700;
 }
 
 .IidName {
@@ -369,22 +380,6 @@ input[type=text] {
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
-}
-
-.collapsible {
-    background-color: rgb(25, 110, 180);
-    color: white;
-    cursor: pointer;
-    padding: 23px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-}
-
-.active, .collapsible:hover {
-    background-color: rgb(141, 145, 142);
 }
 
 .collapsible2 {
@@ -605,7 +600,7 @@ label {
     color: #003A5D;
     font-size: 20px;
     font-weight: bold;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 20;
     height: 100vh;
 }
@@ -632,7 +627,7 @@ input[type=checkbox]:hover {
     text-align: left;
     outline: none;
     font-size: 25px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
 }
 
@@ -682,7 +677,7 @@ input[type=checkbox]:hover {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     padding: 10px 24px;
     text-decoration: none;
@@ -724,7 +719,7 @@ input[type=checkbox]:hover {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: bold;
     padding: 12px 44px;
@@ -767,7 +762,7 @@ input[type=checkbox]:hover {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     padding: 10px 24px;
     text-decoration: none;
@@ -809,7 +804,7 @@ input[type=checkbox]:hover {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     padding: 10px 24px;
     text-decoration: none;
@@ -845,7 +840,7 @@ input[type=checkbox]:hover {
     text-align: left;
     outline: none;
     font-size: 25px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 500;
 }
 
