--- a/public/css/styleManagePD.css
+++ b/public/css/styleManagePD.css
@@ -42,7 +42,7 @@ span.psw {
 body {
     /* color: #555; */
     /* background-image: url("images/leaves-pattern.png"); */
-    font-family: Open Sans;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     position: relative;
     height: 100vh;
@@ -76,7 +76,7 @@ body {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     padding: 10px 24px;
     text-decoration: none;
@@ -102,7 +102,7 @@ body {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     padding: 10px 24px;
     text-decoration: none;
