Working on New Feature: Notify. Sales <- -> Super Admin.

--- a/public/css/styleAddUser.css
+++ b/public/css/styleAddUser.css
@@ -108,7 +108,7 @@ span.psw {
 body {
     /* color: #555; */
     background-image: url("images/leaves-pattern.png");
-    font-family: Open Sans;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     position: relative;
     height: 100vh;
@@ -134,7 +134,7 @@ body {
     display: inline-block;
     cursor: pointer;
     color: #666666;
-    font-family: Arial;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     font-weight: bold;
     padding: 10px 24px;
@@ -177,7 +177,7 @@ body {
     border: 5px solid brown;
     cursor: pointer;
     color: #666666;
-    font-family: Arial;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     font-weight: bold;
     padding: 10px 24px;
@@ -221,7 +221,7 @@ body {
     border: 5px solid brown;
     cursor: pointer;
     color: #666666;
-    font-family: Arial;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     font-weight: bold;
     padding: 10px 24px;
