--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 /* Full-width inputs */
+
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -9,6 +10,7 @@ input[type=text], input[type=password] {
 }
 
 /* Set a style for all buttons */
+
 button {
     background-color: #4CAF50;
     color: white;
@@ -20,11 +22,13 @@ button {
 }
 
 /* Add a hover effect for buttons */
+
 button:hover {
     opacity: 0.8;
 }
 
 /* Extra style for the cancel button (red) */
+
 .cancelbtn {
     width: auto;
     padding: 10px 18px;
@@ -32,6 +36,7 @@ button:hover {
 }
 
 /* Extra style for the register button (blue) */
+
 .register {
     width: auto;
     padding: 10px 18px;
@@ -39,32 +44,37 @@ button:hover {
 }
 
 /* Extra style for the reset button (red) */
+
 .resetbtn {
-    text-align:right;
+    text-align: right;
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
 }
 
 /* Center the avatar image inside this container */
+
 .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
 }
 
 /* Avatar image */
+
 img.avatar {
     width: 15%;
     border-radius: 50%;
 }
 
 /* Right the Logo image inside this container */
+
 .logocontainer {
     position: right;
     margin: 24px 0 12px 0;
 }
 
 /* Logo image */
+
 img.esl {
     width: 25%;
     border-radius: 5%;
@@ -74,17 +84,20 @@ img.esl {
 }
 
 /* Add padding to containers */
+
 .container {
     padding: 16px;
 }
 
 /* The "Forgot password" text */
+
 span.psw {
     float: right;
     padding-top: 16px;
 }
 
 /* Change styles for span and cancel button on extra small screens */
+
 @media screen and (max-width: 300px) {
     span.psw {
         display: block;
@@ -93,7 +106,7 @@ span.psw {
     .cancelbtn {
         width: 100%;
     }
-} 
+}
 
 .title {
     font-size: 35px;
@@ -112,7 +125,7 @@ span.psw {
 body {
     /* color: #555; */
     background-image: url("images/leaves-pattern.png");
-    font-family: Open Sans;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     position: relative;
     height: 100vh;
