--- a/public/css/styleAdminPage.css
+++ b/public/css/styleAdminPage.css
@@ -1,4 +1,5 @@
 /* Full-width inputs */
+
 input[type=text], input[type=password] {
     width: 100%;
     padding: 12px 20px;
@@ -8,8 +9,8 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
 }
 
-
 /* Extra style for the register button (blue) */
+
 .register {
     width: auto;
     padding: 10px 18px;
@@ -17,32 +18,37 @@ input[type=text], input[type=password] {
 }
 
 /* Extra style for the reset button (red) */
+
 .resetbtn {
-    text-align:right;
+    text-align: right;
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
 }
 
 /* Center the avatar image inside this container */
+
 .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
 }
 
 /* Avatar image */
+
 img.avatar {
     width: 15%;
     border-radius: 50%;
 }
 
 /* Right the Logo image inside this container */
+
 .logocontainer {
     position: right;
     margin: 24px 0 12px 0;
 }
 
 /* Logo image */
+
 img.esl {
     width: 25%;
     border-radius: 5%;
@@ -52,17 +58,20 @@ img.esl {
 }
 
 /* Add padding to containers */
+
 .container {
     padding: 16px;
 }
 
 /* The "Forgot password" text */
+
 span.psw {
     float: right;
     padding-top: 16px;
 }
 
 /* Change styles for span and cancel button on extra small screens */
+
 @media screen and (max-width: 300px) {
     span.psw {
         display: block;
@@ -71,7 +80,7 @@ span.psw {
     .cancelbtn {
         width: 100%;
     }
-} 
+}
 
 .title {
     font-size: 35px;
@@ -90,7 +99,7 @@ span.psw {
 body {
     /* color: #555; */
     background-image: url("images/leaves-pattern.png");
-    font-family: Open Sans;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     position: relative;
     height: 100vh;
@@ -124,7 +133,7 @@ body {
     display: inline-block;
     cursor: pointer;
     color: #666666;
-    font-family: Arial;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     font-weight: bold;
     padding: 10px 24px;
@@ -167,7 +176,7 @@ body {
     border: 5px solid brown;
     cursor: pointer;
     color: #666666;
-    font-family: Arial;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     font-weight: bold;
     padding: 10px 24px;
@@ -211,7 +220,7 @@ body {
     border: 5px solid brown;
     cursor: pointer;
     color: #666666;
-    font-family: Arial;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     font-weight: bold;
     padding: 10px 24px;
