--- a/public/css/styleIndex.css
+++ b/public/css/styleIndex.css
@@ -35,7 +35,7 @@ button:hover {
     background-color: #00A1DF;
     font-size: 20px;
     font-weight: bold;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 20;
     font-weight: 700;
 }
@@ -48,7 +48,7 @@ button:hover {
     background-color: #00A1DF;
     font-size: 20px;
     font-weight: bold;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 20;
     font-weight: 700;
 }
@@ -62,7 +62,7 @@ button:hover {
     background-color: #00A1DF;
     font-size: 20px;
     font-weight: bold;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 20;
     font-weight: 700;
 }
@@ -129,7 +129,7 @@ span.psw {
     text-align: center;
     margin-bottom: 10px;
     font-weight: 700;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .subTitle {
@@ -138,14 +138,14 @@ span.psw {
     text-align: center;
     margin-bottom: 10px;
     font-weight: 700;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 label {
     color: #0071CE;
     font-size: 30px;
     font-weight: bold;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 20;
     font-weight: 700;
     /* height: 100vh; */
@@ -154,7 +154,7 @@ label {
 body {
     /* color: #555; */
     /* background-image: url("images/leaves-pattern.png"); */
-    font-family: Open Sans;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
     position: relative;
     height: 100vh;
