--- a/public/css/styleManagePD.css
+++ b/public/css/styleManagePD.css
@@ -186,3 +186,15 @@ h6 {
     height: 500px;
     overflow: auto;
 }
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 2px solid black;
+    text-align: left;
+    padding: 8px;
+}
