--- a/public/css/styleManagePD.css
+++ b/public/css/styleManagePD.css
@@ -188,7 +188,7 @@ h6 {
 }
 
 table {
-    font-family: arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
