--- a/public/css/styleFinalizedProposals.css
+++ b/public/css/styleFinalizedProposals.css
@@ -120,7 +120,7 @@ body {
     background: -webkit-linear-gradient(top, #007dc1 5%, #0061a7 100%);
     background: -o-linear-gradient(top, #007dc1 5%, #0061a7 100%);
     background: -ms-linear-gradient(top, #007dc1 5%, #0061a7 100%);
-    background: linear-gradient(to bottom, #003A5D 5%, #003A5D 100%);
+    background: linear-gradient(to bottom, #00A1DF 5%, #00A1DF 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#007dc1', endColorstr='#0061a7', GradientType=0);
     background-color: #007dc1;
     -moz-border-radius: 1px;
@@ -136,8 +136,6 @@ body {
     text-decoration: none;
     text-shadow: 0px 1px 0px #154682;
 }
-
-
 
 .logout:hover, .admin:hover, .ckp:hover, .update:hover {
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0061a7), color-stop(1, #007dc1));
